# Chess-Game

./: .gitignore  CMakeLists.txt  Chess_Game.pro  Pawn.cpp  Pawn.h  README.md  images.qrc  ingame.cpp  ingame.h  ingame.ui  main.cpp  unit_tests.cpp
Menu/: mainwindow.cpp  mainwindow.h  mainwindow.ui
header/: Bishop.h  ChessBoard.h  ChessPiece.h  DiagonalMove.h  DiagonalScan.h  King.h  KingScan.h  Knight.h  KnightScan.h  MoveAlg.h  Pawn.h  PawnScan.h  Queen.h  Rook.h  ScanAlg.h  Square.h  StraightMove.h  StraightScan.h
src/: Bishop.cpp  ChessBoard.cpp  ChessPiece.cpp  DiagonalMove.cpp  DiagonalScan.cpp  King.cpp  KingScan.cpp  Knight.cpp  KnightScan.cpp  Pawn.cpp  PawnScan.cpp  Queen.cpp  Rook.cpp  StraightMove.cpp  StraightScan.cpp
test/: king_tests.h  knight_tests.h  pawn_tests.h  queen_tests.h  rook_tests.h
